remove setting icon

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,9 +8,9 @@
 	<meta name="Hama" content="Hama - Free vocabulary learning app" />
 	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-	<title>Hama - Ứng dụng học tiếng Anh miễn phí</title>
-	<meta name="description" content="Ứng dụng học tiếng Anh miễn phí cho người Việt">
-	<meta property="og:title" content="Hama - Ứng dụng học tiếng Anh miễn phí cho người Việt">
+	<title>Hama - Ứng dụng học tiếng Nhật miễn phí</title>
+	<meta name="description" content="Ứng dụng học tiếng Nhật miễn phí cho người Việt">
+	<meta property="og:title" content="Hama - Ứng dụng học tiếng Nhật miễn phí cho người Việt">
 	<meta property="og:url" content="https://dynonary.herokuapp.com">
 	<meta property="og:type" content="website">
 	<meta property="og:image:height" content="630">
@@ -19,7 +19,7 @@
 	<meta property="og:image"
 		content="https://res.cloudinary.com/instagram-cloud-store/image/upload/v1639994777/default_tk6vnk.jpg">
 	<meta property="og:description"
-		content="Website học tiếng Anh miễn phí dành cho người Việt, áp dụng những phương pháp học hiệu quả và bắt mắt, giúp việc học tiếng Anh không còn trở nên nhàm chán.">
+		content="Website học tiếng Nhật miễn phí dành cho người Việt, áp dụng những phương pháp học hiệu quả và bắt mắt, giúp việc học tiếng Nhật miễn phí không còn trở nên nhàm chán.">
 
 	<!-- google font -->
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
